[package]
authors = ["887 <2300887@gmail.com>"]
name = "httpsdns"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.0"
chrono = "0.2.25"
futures = "0.1.2"
futures-cpupool = "0.1.2"
http-muncher = "0.3.0"
serde = "0.8.16"
serde_derive = "0.8.17"
serde_json = "0.8.3"
tokio-core = "0.1.0"
toml = {default-features = false, version = "0.2.1", features = ["serde"]}

[dependencies.dns-parser]
git = "https://github.com/david-cao/dns-parser"

[dependencies.openssl]
optional = true
version = "0.8"

[dependencies.tokio-tls]
git = "https://github.com/tokio-rs/tokio-tls"
optional = false

[features]
server = []

[target]

[target."cfg(all(unix, not(target_os = \"macos\")))"]

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies]
openssl = "0.8"
